main.tf


data "aws_availability_zones" "available" {}



data "aws_ami" "al2023" {

  most_recent = true

  owners      = ["amazon"]



  filter {

    name   = "name"

    values = ["al2023-ami-*-x86_64"]

  }

}



resource "aws_vpc" "this" {

  cidr_block           = "10.0.0.0/16"

  enable_dns_support   = true

  enable_dns_hostnames = true



  tags = {

    Name = "${var.project_name}-vpc"

  }

}



resource "aws_internet_gateway" "this" {

  vpc_id = aws_vpc.this.id



  tags = {

    Name = "${var.project_name}-igw"

  }

}



resource "aws_subnet" "public" {

  vpc_id                  = aws_vpc.this.id

  cidr_block              = "10.0.1.0/24"

  availability_zone       = data.aws_availability_zones.available.names[0]

  map_public_ip_on_launch = true



  tags = {

    Name = "${var.project_name}-public-subnet"

  }

}



resource "aws_route_table" "public" {

  vpc_id = aws_vpc.this.id



  route {

    cidr_block = "0.0.0.0/0"

    gateway_id = aws_internet_gateway.this.id

  }



  tags = {

    Name = "${var.project_name}-public-rt"

  }

}



resource "aws_route_table_association" "public" {

  subnet_id      = aws_subnet.public.id

  route_table_id = aws_route_table.public.id

}



resource "aws_security_group" "web_sg" {

  name        = "${var.project_name}-sg"

  description = "Allow SSH and HTTP"

  vpc_id      = aws_vpc.this.id



  ingress {

    description = "HTTP"

    from_port   = 80

    to_port     = 80

    protocol    = "tcp"

    cidr_blocks = ["0.0.0.0/0"]

  }



  ingress {

    description = "SSH from my IP"

    from_port   = 22

    to_port     = 22

    protocol    = "tcp"

    cidr_blocks = [var.my_ip_cidr]

  }



  egress {

    description = "All outbound"

    from_port   = 0

    to_port     = 0

    protocol    = "-1"

    cidr_blocks = ["0.0.0.0/0"]

  }



  tags = {

    Name = "${var.project_name}-sg"

  }

}



resource "aws_instance" "web" {

  ami                    = data.aws_ami.al2023.id

  instance_type          = var.instance_type

  subnet_id              = aws_subnet.public.id

  vpc_security_group_ids = [aws_security_group.web_sg.id]

  key_name               = var.key_name



  user_data = file("${path.module}/userdata.sh")



  tags = {

    Name = "${var.project_name}-ec2"

  }

}
